--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ references.bib
 *.fot
 *.cb
 *.cb2
+*.lbl
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
@@ -199,6 +200,7 @@ TSWLatexianTemp*
 .project
 /backup/
 /rasha19iros.pdf
+/rasha19vmv.pdf
 pics/original/
 pics/output_system_overview_large.pdf
 pics/output_system_overview_old.pdf
